[gd_scene load_steps=20 format=3 uid="uid://d32ubwtklxff8"]

[ext_resource type="Texture2D" uid="uid://bxn8qua808qta" path="res://assets/items/LED.png" id="1_36tes"]
[ext_resource type="Script" uid="uid://b58p80mf0hhgv" path="res://vfx/check_source_projectile.gd" id="1_lf1xj"]
[ext_resource type="Shader" uid="uid://bitvbkd7ovofv" path="res://shaders/blink_shader.gdshader" id="2_tuxoo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_604ft"]
resource_local_to_scene = true
shader = ExtResource("2_tuxoo")
shader_parameter/flash_amount = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="Curve" id="Curve_fpun6"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_wc255"]
curve = SubResource("Curve_fpun6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_arp2o"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
flatness = 1.0
initial_velocity_min = 74.85
initial_velocity_max = 104.85
gravity = Vector3(0, 98, 0)
scale_min = 0.6
scale_max = 2.6
scale_curve = SubResource("CurveTexture_wc255")
color = Color(1.8, 1.2, 0.22, 1)

[sub_resource type="Curve" id="Curve_lf1xj"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_tuxoo"]
curve = SubResource("Curve_lf1xj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_604ft"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 42.19
initial_velocity_max = 113.91
scale_min = 3.0
scale_max = 5.0
scale_curve = SubResource("CurveTexture_tuxoo")

[sub_resource type="Curve" id="Curve_tuxoo"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_604ft"]
curve = SubResource("Curve_tuxoo")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0qu05"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
initial_velocity_min = 75.95
initial_velocity_max = 143.46
gravity = Vector3(0, 98, 0)
scale_max = 3.6
scale_curve = SubResource("CurveTexture_604ft")
color = Color(0.874128, 0.288249, 0.167215, 1)

[sub_resource type="Curve" id="Curve_604ft"]
_data = [Vector2(0, 0), 0.0, 4.85742, 0, 0, Vector2(0.120603, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_0qu05"]
curve = SubResource("Curve_604ft")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7qyun"]
particle_flag_disable_z = true
direction = Vector3(0.3, -1, 0)
spread = 15.0
initial_velocity_min = 75.95
initial_velocity_max = 143.46
gravity = Vector3(0, 98, 0)
scale_min = 5.22
scale_max = 7.82
scale_curve = SubResource("CurveTexture_0qu05")
color = Color(0.502, 0.486, 0.482, 0.271)
turbulence_enabled = true

[sub_resource type="Animation" id="Animation_0qu05"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D4:material:shader_parameter/flash_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_tuxoo"]
resource_name = "default"
length = 0.4
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GPUParticles2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D4:material:shader_parameter/flash_amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.775, 1.635]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_604ft"]
_data = {
&"RESET": SubResource("Animation_0qu05"),
&"default": SubResource("Animation_tuxoo")
}

[node name="SparksThenBoom" type="Node2D"]
script = ExtResource("1_lf1xj")

[node name="Sprite2D4" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_604ft")
scale = Vector2(0.027, 0.027)
texture = ExtResource("1_36tes")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_arp2o")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
emitting = false
amount = 80
lifetime = 0.8
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_604ft")

[node name="GPUParticles2D3" type="GPUParticles2D" parent="."]
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_0qu05")

[node name="GPUParticles2D4" type="GPUParticles2D" parent="."]
emitting = false
amount = 30
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_7qyun")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_604ft")
}

[node name="Lifetime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PreLifetime" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Lifetime" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PreLifetime" to="." method="_on_pre_lifetime_timeout"]
